--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,8 +4,8 @@ spring:
       client:
         registration:
           blizzard:
-            client-id: a1f160c17f414b63978978da6ee50523
-            client-secret: v2I0XRxsref7j63MSY3Df2NOw7dAaaDU
+            client-id: (())
+            client-secret: (())
             authorization-grant-type: client_credentials
         provider:
           blizzard:
